chore(seo-improve): Improve the SEO - Add optional to the email field on Sign up - Add optional on video input field - Spacing of the line on pricing section - Update text on USSD share popup - Fix links the footer menus - Use the right icon for the HOW IT WORKS section - Remove the horizontal scolling on the layout - Fix issue with the `CauseSider` scrolling on mobile - Use the term Till Number instead of `Save Plus Bill` - Fix the issue with double `Ago` on ended causes [Delivers]

--- a/components/common/SharePopover/index.module.scss
+++ b/components/common/SharePopover/index.module.scss
@@ -6,7 +6,10 @@
   &__ussd {
     color: $primary;
     &__text {
+      position: relative;
+      top: -30px;
       text-align: center;
+      font-size: 12pt;
     }
   }
   &__facebook {
